--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -70,42 +70,21 @@ button {
     text-align: center;
 }
 
-#flush_success {
-    width: 100%;
-    padding-top: 28px;
-    padding-left: 2%;
-    padding-bottom: 28px;
-    margin-bottom: 15px;
-    color: #155724;
-    background-color: #d4edda;
-}
-
-#flush_error {
-    width: 100%;
-    padding-top: 28px;
-    padding-left: 2%;
-    padding-bottom: 28px;
-    margin-bottom: 15px;
-    color: #721c24;
-    background-color: #f8d7da;
-}
-
-table#employee_list th{
+table#employee_list th {
     width: 30%;
     padding: 10px 2%;
 }
 
-table#employee_list td{
+table#employee_list td {
     width: 29%;
     padding: 10px 2%;
 }
 
-th.row1{
-    background-color: #f2f2f2;
+tr.row1 {
+        background-color: #f2f2f2;
 }
-
-th.row0{
-    background-color: #ffffff;
+tr.row0 {
+        background-color: #ffffff;
 }
 
 select {
@@ -133,4 +112,24 @@ select {
 
 h1 a {
     color: #eeeeee;
+}
+
+#flush_success {
+    width: 100%;
+    padding-top: 28px;
+    padding-left: 2%;
+    padding-bottom: 28px;
+    margin-bottom: 15px;
+    color: #155724;
+    background-color: #d4edda;
+}
+
+#flush_error {
+    width: 100%;
+    padding-top: 28px;
+    padding-left: 2%;
+    padding-bottom: 28px;
+    margin-bottom: 15px;
+    color: #721c24;
+    background-color: #f8d7da;
 }
