--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -8,7 +8,7 @@ body {
 #header {
     width: 100%;
     height: 70px;
-    background-color: #333333;
+    background-color: #27acd9;
 }
 
 #content {
@@ -66,7 +66,7 @@ button {
     padding: 5px 10px;
 }
 
-#footer {
+footer {
     text-align: center;
 }
 
@@ -99,7 +99,7 @@ select {
 }
 
 #employee_name {
-    color: #cccccc;
+    color: #eeeeee;
     width: 36%;
     padding-right: 3%;
     text-align: right;
